--- a/.github/workflows/maven-publish-v2.yml
+++ b/.github/workflows/maven-publish-v2.yml
@@ -1,7 +1,7 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
 
-name: Maven QoCIM Package Publish v2
+name: QoCIM Publish Package
 
 on:  
   release:
