--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -4,7 +4,7 @@
 name: QoCIM Build Package
 
 on: [push]
-      
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,4 +23,4 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
     - name: Build with Maven
-      run: mvn -B package
+      run: mvn -B package -f framework/pom.xml
